Fix column hiding on mobile devices (closes #88)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,17 +59,6 @@ clr-dg-cell {
   text-align: center;
 }
 
-// Utility for hiding elements on mobile screens
-@media screen and (max-width: 768px) {
-
-  .hide-on-mobile{
-
-    display: none;
-
-  }
-
-}
-
 .margin-top-1-rem{
   margin-top: 1rem;
 }
